try to fix negative z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,14 +87,14 @@
     min-height: 757px;
     text-transform: uppercase;
     margin-top: -5px;
-    z-index: -1;
+    /*z-index: -1;*/
 }
 
 .overlay {
     position: absolute;
     inset: 0 0;
     background-color: rgba(0 0 0 / .6);
-    z-index: 0;
+    z-index: 1;
 }
 
 .cover__title {
@@ -276,7 +276,7 @@
     height: 240px;
     border-radius: 50%;
     background-color: black;
-    z-index: -1;
+    /*z-index: -1;*/
 }
 
 .about__logo-image {
